homer/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
