homer/40-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
spec:
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      volumes:
      - name: config
        configMap:
          name: homer-config
          items:
          - key: config.yml
            path: config.yml
      containers:
      - image: b4bz/homer
        name: homer
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 32Mi
            cpu: 10m
          limits:
            memory: 64Mi
            cpu: 50m
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /www/assets/config.yml
          subPath: config.yml
          readOnly: true
        - name: config
          mountPath: /www/assets/custom.css
          subPath: custom.css
          readOnly: true
