homer/50-oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://pocket.internal.czcx.cc
            - --client-id=84ad451e-c602-4751-9563-c6272fa1b32f
            - --redirect-url=https://homer.internal.czcx.cc/oauth2/callback
            - --upstream=http://homer.homer.svc.cluster.local:80
            - --http-address=0.0.0.0:4180
            - --cookie-secure=true
            - --cookie-domain=homer.internal.czcx.cc
            - --email-domain=*
            - --scope=openid email profile
            - --oidc-email-claim=email
            - --ssl-insecure-skip-verify=true
            - --oidc-extra-audience=84ad451e-c602-4751-9563-c6272fa1b32f
            - --insecure-oidc-skip-issuer-verification=true
            - --insecure-oidc-allow-unverified-email=true
            - --login-url=https://pocket.internal.czcx.cc/authorize
            - --redeem-url=http://pocket-id.pocket-id.svc.cluster.local:1411/api/oidc/token
            - --oidc-jwks-url=http://pocket-id.pocket-id.svc.cluster.local:1411/.well-known/jwks.json
            - --profile-url=http://pocket-id.pocket-id.svc.cluster.local:1411/api/oidc/userinfo
            - --custom-templates-dir=/templates
            - --skip-oidc-discovery=true
          volumeMounts:
            - name: templates
              mountPath: /templates
          ports:
            - containerPort: 4180
      volumes:
        - name: templates
          configMap:
            name: oauth2-proxy-templates
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: homer
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      targetPort: 4180
