homer/65-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer
  namespace: homer
spec:
  parentRefs:
    - name: internal-gateway
      namespace: istio-system
  hostnames:
    - "homer.internal.czcx.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy
          port: 4180
